[gd_scene load_steps=7 format=2]

[ext_resource path="res://BasicGoodPixelart.tres" type="Material" id=1]
[ext_resource path="res://ui/Audiowide24Pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/basic_gun_SHOP_ICON.png" type="Texture" id=3]
[ext_resource path="res://MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://ui/ShipBuyer.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.0313726, 0.027451, 0.0784314, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.341176, 0.258824, 0.494118, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="ShipBuyer" type="TextureRect"]
material = ExtResource( 1 )
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 0 )
theme = ExtResource( 4 )
texture = ExtResource( 3 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CostLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.5
margin_top = 11.0
margin_right = 97.5
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "$999999999"
align = 1

[node name="InfoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = -52.0
margin_right = 88.0
margin_bottom = -15.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
enabled_focus_mode = 0
text = "Info"

[node name="BuyButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = 47.0
margin_right = 88.0
margin_bottom = 84.0
focus_mode = 0
custom_fonts/font = ExtResource( 2 )
disabled = true
enabled_focus_mode = 0
text = "Buy"

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="toggled" from="InfoButton" to="." method="_on_InfoButton_toggled"]
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
